# freedesktop-icons

./: Cargo.toml  README.md
benches/: lookup.rs  simple_lookup.rs  tests.rs
src/: cache.rs  error.rs  lib.rs  lookup.rs
src/theme/: directories.rs  error.rs  mod.rs  parse.rs  paths.rs
