[package]
name = "freedesktop-icons"
version = "0.2.4"
edition = "2021"

license = "MIT"
description = "A Freedesktop Icons lookup crate"
repository = "https://github.com/oknozor/freedestkop-icons"
readme = "README.md"
keywords = ["icons", "gui", "freedesktop"]

[dependencies]
dirs = "4.0.0"
rust-ini = "0.18.0"
thiserror = "1.0.31"
once_cell = "1.10.0"
xdg = "2.4.1"

[dev-dependencies]
speculoos = "0.9.0"
anyhow = "1.0.57"
linicon = "2.3.0"
gtk4 = "0.4.7"
criterion = "0.3.5"

[[bench]]
name = "simple_lookup"
harness = false