[package]
name = "freedesktop-icons"
version = "0.2.6"
edition = "2021"

license = "MIT"
description = "A Freedesktop Icons lookup crate"
repository = "https://github.com/oknozor/freedestkop-icons"
readme = "README.md"
keywords = ["icons", "gui", "freedesktop"]

[dependencies]
dirs = "5.0.1"
rust-ini = "0.20.0"
thiserror = "1.0.56"
once_cell = "1.19.0"
xdg = "2.5.2"

[dev-dependencies]
speculoos = "0.11.0"
anyhow = "1.0.79"
linicon = "2.3.0"
gtk4 = "0.4.7"
criterion = "0.3.5"

[[bench]]
name = "simple_lookup"
harness = false
