[package]
name = "freedesktop-icons"
version = "0.3.1"
edition = "2021"

license = "MIT"
description = "A Freedesktop Icons lookup crate"
repository = "https://github.com/oknozor/freedestkop-icons"
readme = "README.md"
keywords = ["icons", "gui", "freedesktop"]

[dependencies]
dirs = "5.0.1"
thiserror = "1.0.56"
once_cell = "1.19.0"
xdg = "2.5.2"
tracing = "0.1.41"
ini_core = "0.2.0"

[dev-dependencies]
speculoos = "0.11.0"
linicon = "2.3.0"
gtk4 = "0.9"
criterion = "0.5"

[features]
default = []
local_tests = []

[[bench]]
name = "simple_lookup"
harness = false
